; ModuleID = '/home/carl/AnghaBench/linux/arch/arm/mach-pxa/extr_pxa_cplds_irqs.c_cplds_irq_unmask.c'
source_filename = "/home/carl/AnghaBench/linux/arch/arm/mach-pxa/extr_pxa_cplds_irqs.c_cplds_irq_unmask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }
%struct.cplds = type { i32, i64 }

@FPGA_IRQ_SET_CLR = common dso_local global i64 0, align 8
@FPGA_IRQ_MASK_EN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @cplds_irq_unmask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cplds_irq_unmask(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  %3 = alloca %struct.cplds*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %7 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %8 = call %struct.cplds* @irq_data_get_irq_chip_data(%struct.irq_data* %7)
  store %struct.cplds* %8, %struct.cplds** %3, align 8
  %9 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %10 = call i32 @irqd_to_hwirq(%struct.irq_data* %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @BIT(i32 %11)
  store i32 %12, i32* %6, align 4
  %13 = load %struct.cplds*, %struct.cplds** %3, align 8
  %14 = getelementptr inbounds %struct.cplds, %struct.cplds* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = load i64, i64* @FPGA_IRQ_SET_CLR, align 8
  %17 = add nsw i64 %15, %16
  %18 = call i32 @readl(i64 %17)
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* %6, align 4
  %21 = xor i32 %20, -1
  %22 = and i32 %19, %21
  %23 = load %struct.cplds*, %struct.cplds** %3, align 8
  %24 = getelementptr inbounds %struct.cplds, %struct.cplds* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = load i64, i64* @FPGA_IRQ_SET_CLR, align 8
  %27 = add nsw i64 %25, %26
  %28 = call i32 @writel(i32 %22, i64 %27)
  %29 = load i32, i32* %6, align 4
  %30 = load %struct.cplds*, %struct.cplds** %3, align 8
  %31 = getelementptr inbounds %struct.cplds, %struct.cplds* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = or i32 %32, %29
  store i32 %33, i32* %31, align 8
  %34 = load %struct.cplds*, %struct.cplds** %3, align 8
  %35 = getelementptr inbounds %struct.cplds, %struct.cplds* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = load %struct.cplds*, %struct.cplds** %3, align 8
  %38 = getelementptr inbounds %struct.cplds, %struct.cplds* %37, i32 0, i32 1
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* @FPGA_IRQ_MASK_EN, align 8
  %41 = add nsw i64 %39, %40
  %42 = call i32 @writel(i32 %36, i64 %41)
  ret void
}

declare dso_local %struct.cplds* @irq_data_get_irq_chip_data(%struct.irq_data*) #1

declare dso_local i32 @irqd_to_hwirq(%struct.irq_data*) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
